# ROI-Selection-for-Route-Planning

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requrements.txt
core/: __init__.py
core/base/: __init__.py  constraint.py  planner.py  roi_selector.py  scenario.py
core/constraints/: energy_constraint.py  weather_constraint.py
core/interfaces/: constraint.py  scenario.py
core/planning/: astar.py  dijkstra.py  route_manager.py
core/roi/: dynamic_roi.py  roi.py  roi_iterator.py  static_roi.py
core/simulation/: evaluator.py  metrics.py
experiments/: scenarios.py
tests/: conftest.py  test_constraints.py  test_planner.py  test_roi.py  test_simulation.py
utils/: config.example.py  config.py  dates.py  geometry.py  graph_utils.py  visualization.py
